@@ -3,6 +3,9 @@
 - Added an inline_assert method for constraint objects. This makes certain
   types of inlining tasks easier.
 
+- Parameterized constraint objects now have a default name based on the parent
+  type and contained type.
+
 
 0.13     2016-05-15
 
